# screencapture-mcp

./: .flake8  .gitignore  README.md  pyproject.toml  screencapture_server.py  server.py  test_video.mov
.github/workflows/: ci.yml
tests/: test_server.py
