[project]
name = "screencapture-mcp"
version = "0.1.0"
description = "MCP server for macOS screen capture and video recording"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pyobjc-core>=10.0",
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-AVFoundation>=10.0",
]

[project.scripts]
screencapture-mcp = "screencapture_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
