[project]
name = "screencapture-mcp"
version = "0.1.0"
description = "MCP server for macOS screen capture and video recording"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pyobjc>=10.0",
]

[project.optional-dependencies]
dev = [
    "pylint>=3.0.0",
    "flake8>=7.0.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "safety>=2.0.0",
    "types-setuptools",
]

[project.scripts]
screencapture-mcp = "screencapture_server:main"

[tool.hatch.build.targets.wheel]
packages = ["screencapture_server.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"